# Lakehouse-Projet-Essenam-Christie-Providence

./: .gitignore  .user.yml  README.md  dbt_project.yml  docker-compose.yaml  main.py  profiles.yml  pyproject.toml
airflow/: ingestion.py
airflow/.ipynb_checkpoints/: Wintershop-checkpoint.ipynb
config/: airflow.cfg
dags/: wintershop_pipeline.py
macros/: filter.sql  log_parsing.sql  user_agent_utils.sql
models/: sources.yml
models/gold/: gold_referer_volume.sql
models/gold/dim/: dim_device.sql  dim_page.sql  dim_referer.sql  dim_time.sql  schema.yml
models/gold/fact/: fact_device_usage.sql  fact_errors.sql  fact_page_views.sql  fact_referer_visit.sql  schema.yml
models/silver/: schema.yml  silver.sql  stg_logs.sql
