[project]
name = "lakehouse-projet-essenam-christie-providence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "boto3>=1.42.27",
    "dbt-core>=1.11.2",
    "dbt-postgres>=1.10.0",
    "psycopg2-binary>=2.9.11",
]
